--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "eslint": "^6.8.0",
     "mocha": "^6.1.4",
     "package": "^1.0.1",
-    "perf_hooks": "0.0.1",
-    "wasmbuilder": "0.0.11"
+    "perf_hooks": "0.0.1"
   },
   "dependencies": {
     "big-integer": "^1.6.42",
-    "blakejs": "^1.1.0"
+    "blakejs": "^1.1.0",
+    "wasmbuilder": "0.0.11"
   }
 }
