--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "mocha": "^6.1.4",
-    "package": "^1.0.1",
-    "perf_hooks": "0.0.1"
+    "mocha": "^6.1.4"
   },
   "dependencies": {
     "big-integer": "^1.6.42",
