chore: Remove some more wasmsnark code

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --experimental-worker",
-    "build_bn128": "node tools/buildwasm_bn128.js; browserify main_bn128.js -o build/wasmsnark_bn128.js --exclude worker_threads --exclude crypto; cp build/wasmsnark_bn128.js example/bn128/wasmsnark_bn128.js",
-    "build_mnt6753": "node tools/buildwasm_mnt6753.js; browserify main_mnt6753.js -o build/wasmsnark_mnt6753.js --exclude worker_threads --exclude crypto; cp build/wasmsnark_mnt6753.js example/mnt6753/wasmsnark_mnt6753.js",
-    "build_bls12381": "node tools/buildwasm_bls12381.js; browserify main_bls12381.js -o build/wasmsnark_bls12381.js --exclude worker_threads --exclude crypto; cp build/wasmsnark_bls12381.js example/bls12381/wasmsnark_bls12381.js"
+    "build_bn128": "node tools/buildwasm_bn128.js",
+    "build_mnt6753": "node tools/buildwasm_mnt6753.js",
+    "build_bls12381": "node tools/buildwasm_bls12381.js"
   },
   "keywords": [
     "bigint",
@@ -31,7 +31,6 @@
   },
   "dependencies": {
     "big-integer": "^1.6.42",
-    "blakejs": "^1.1.0",
     "wasmbuilder": "0.0.11"
   }
 }
